# FreeCoAP

./: Makefile.am  README.md  configure.ac
certs/: client_cert.pem  client_privkey.pem  client_template.txt  gen_certs.sh  root_client_cert.pem  root_client_privkey.pem  root_server_cert.pem  root_server_privkey.pem  root_template.txt  server_cert.pem  server_privkey.pem  server_template.txt
certs/gen_certs/: client.conf  gen_certs.sh  root_client.conf  root_server.conf  (+1 more)
harness/: harness.c  harness.h
include/: coap_client.h  coap_log.h  coap_msg.h  coap_server.h
lib/: Makefile.am
lib/include/: coap_client.h  coap_ipv.h  coap_log.h  coap_mem.h  coap_msg.h  coap_server.h
lib/src/: coap_client.c  coap_log.c  coap_mem.c  coap_msg.c  coap_server.c
org.eclipse.tinydtls/: ccm.c  crypto.c  crypto.h  dtls.c  dtls.h  dtls_config.h  dtls_debug.c  dtls_debug.h  dtls_time.c  global.h  hmac.c  hmac.h  netq.c  netq.h  peer.c  session.c  tinydtls.h
raw_keys/: client.pem  client_access.txt  client_priv_key.txt  client_pub_key.txt  gen_keys.sh  server.pem  server_access.txt  server_priv_key.txt  server_pub_key.txt
rust-bindings/: Cargo.toml  build.rs  wrapper.h
src/: coap_client.c  coap_log.c  coap_msg.c  coap_server.c
test/: test.c  test.h
test_client/: Makefile  build_quark.sh  client.c  client_cert.pem  client_privkey.pem  root_server_cert.pem  test_client.c
test_msg/: Makefile  build_host.sh  build_quark.sh  harness.h  test_coap_msg.c  test_msg.c
test_server/: Makefile  root_client_cert.pem  server.c  server_cert.pem  server_privkey.pem  test_server.c
(+136 files in other folders)
